# efg

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  efg.sln
efg/: Animation.cpp  Animation.h  Engine.cpp  Engine.h  FlyCamera.cpp  FlyCamera.h  GameObjects.cpp  GameObjects.h  Gui.cpp  Gui.h  Light.cpp  Light.h  RenderLayer.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Shapes.cpp  Shapes.h  efg.vcxproj  efg.vcxproj.filters  imgui.ini  lit.frag  lit.vert  main.cpp  sky.frag  sky.vert  water.frag  water.vert
